Commit to article update

--- a/topics.html
+++ b/topics.html
@@ -50,6 +50,14 @@
 											<h3>... examples of papers that <span style="color: #004d65;">geophysics@pknu</span> is concerned with</h3>
 										</header>
                                         <ul class="link-list last-child">
+                                            <h3>General science</h3>
+                                            <li class="publication">Thorp, H. H. (2021). Public debate is good for science. <i>Science</i>, <b>371</b>(6526), 213. <a href="https://doi.org/10.1126/science.abg4685" target="_blank">doi:10.1126/science.abg4685</a>
+                                            </li>
+                                            <li class="publication">Dance, A. (2021). Sharper signals: how machine learning is cleaning up microscopy images. <i>Nature</i>, <b>589</b>(7841), 318-319. <a href="https://doi.org/10.1038/d41586-021-00023-0" target="_blank">doi:10.1038/d41586-021-00023-0</a>
+                                            </li>
+                                        </ul>
+                                        <br>
+                                        <ul class="link-list last-child">
                                             <h3>Earthquakes in Korea</h3>
                                             <li class="publication">Kang, T.-S., Baag, C.-E. (2004). The 29 May 2004, Mw = 5.1, offshore Uljin earthquake, Korea. <i>Geosciences Journal</i>, <b>8</b>(2), 115-123. <a href="https://doi.org/10.1007/BF02910189" target="_blank">doi:10.1007/BF02910189</a>
                                             </li>
@@ -65,13 +73,23 @@
                                         <br>
                                         <ul class="link-list last-child">
                                             <h3>Hazard in Korea</h3>
-                                            <li class="publication">TBA (). . <i></i>, <b></b>(), -. <a href="https://doi.org/" target="_blank">doi:</a>
+                                            <li class="publication">Böse, M., Julien‐Laferrière, S., Bossu, R., Massin, F. (2021). Near real-time earthquake line-source models derived from felt reports. <i>Seismological Research Letters</i>, <b>xx</b>(xx), xx-xx. <a href="https://doi.org/10.1785/0220200244" target="_blank">doi:10.1785/0220200244</a>
                                             </li>
                                         </ul>
                                         <br>
                                         <ul class="link-list last-child">
                                             <h3>Social Seismology</h3>
                                             <li class="publication">Cuellar, C. (2020). Students monitor campus noise in seismic silence. <i>Eos</i>, <b>101</b>, <a href="https://doi.org/10.1029/2020EO152734" target="_blank">doi:10.1029/2020EO152734</a>
+                                            </li>
+                                        </ul>
+                                        <br>
+                                        <ul class="link-list last-child">
+                                            <h3>Deep Earth</h3>
+                                            <li class="publication">University of Maryland (2020). <a href="https://phys.org/news/2020-06-scientists-unexpected-widespread-earth-core.html" target="_blank">Scientists detect unexpected widespread structures near Earth's core</a>.
+                                            </li>
+                                            <li class="publication">Miller, M. S. (2020). Mapping Earth's deepest secrets. <i>Science</i>, <b>368</b>(6496), 1183-1184. <a href="https://doi.org/10.1126/science.abc3134" target="_blank">doi:10.1126/science.abc3134</a>
+                                            </li>
+                                            <li class="publication">Kim, D., Lekić, V., Ménard, B., Baron, D., Taghizadeh-Popp, M. (2020). Sequencing seismograms: A panoptic view of scattering in the core-mantle boundary region. <i>Science</i>, <b>368</b>(6496), 1223-1228. <a href="https://doi.org/10.1126/science.aba8972" target="_blank">doi:10.1126/science.aba8972</a>
                                             </li>
                                         </ul>
                                         <br>
@@ -180,6 +198,8 @@
                                             <h3>Stress field</h3>
                                             <li class="publication">Carvalho, J., Barros, L. V., Zahradník, J. (2016). Focal mechanisms and moment tensor magnitudes of micro-earthquakes in central Brazil by waveform inversion with quality assessment and inference of the local stress field. <i>Journal of South American Earth Sciences</i>, <b>71</b>, 333-343. <a href="https://doi.org/10.1016/j.jsames.2015.07.020" target="_blank">doi:10.1016/j.jsames.2015.07.020</a>
                                             </li>
+                                            <li class="publication">Wu, W.-J., Su, C.-M., Wen, S., Li, Y.-H., Liao, Y.-C., Peng, H.-C., Chen, C.-H. (2021). Microseismic monitoring and stress inversion in northeast Taiwan. <i>Seismological Research Letters</i>, <b>xx</b>, xx-xx. <a href="https://doi.org/10.1785/0220200262" target="_blank">doi:10.1785/0220200262</a>
+                                            </li>
                                         </ul>
                                         <br>
                                         <ul class="link-list last-child">
@@ -208,6 +228,8 @@
                                         <br>
                                         <ul class="link-list last-child">
                                             <h3>Softwares</h3>
+                                            <li class="publication"><a href="http://sequencer.org/" target="_blank">The Sequencer</a>
+                                            </li>
                                             <li class="publication">Olivieri, M., Clinton, J. (2012). An almost fair comparison between Earthworm and SeisComP3. <i>Seismological Research Letters</i>, <b>83</b>(4), 720-727. <a href="https://doi.org/10.1785/0220110111" target="_blank">doi:10.1785/0220110111</a>
                                             </li>
                                             <li class="publication">Triantafyllis, N., Sokos, E., Ilias, A., Zahradník, J. (2016). Scisola: automatic moment tensor solution for SeisComP3. <i>Seismological Research Letters</i>, <b>87</b>(1), 157-163. <a href="https://doi.org/10.1785/0220150065" target="_blank">doi:10.1785/0220150065</a>
@@ -265,13 +287,23 @@
                                         <br>
                                         <ul class="link-list last-child">
                                             <h3>Lab02</h3>
-                                            <li class="publication">Jeddi, Z., Tryggvason, A., Gudmundsson, Ó. (2016). The Katla volcanic system imaged using local earthquakes recorded with a temporary seismic network. <i>Journal of Geophysical Research: Solid Earth</i>, <b>121</b>(10), 7230–7251. <a href="https://doi.org/10.1002/2016JB013044" target="_blank">doi:10.1002/2016JB013044</a>
+                                            <li class="publication">Jeddi, Z., Tryggvason, A., Gudmundsson, &#211;. (2016). The Katla volcanic system imaged using local earthquakes recorded with a temporary seismic network. <i>Journal of Geophysical Research: Solid Earth</i>, <b>121</b>(10), 7230–7251. <a href="https://doi.org/10.1002/2016JB013044" target="_blank">doi:10.1002/2016JB013044</a>
                                             </li>
                                         </ul>
                                         <br>
                                         <ul class="link-list last-child">
-                                            <h3>Lab03</h3>
-                                            <li class="publication">TBA (). . <i></i>, <b></b>(), -. <a href="https://doi.org/" target="_blank">doi:</a>
+                                            <h3>Lab03: Insight from other fields</h3>
+                                            <li class="publication"><a href="http://csbdeep.bioimagecomputing.com/" target="_blank">CSBDeep</a> - a deep learning toolbox for microscopy image restoration and analysis.
+                                            </li>
+                                            <li class="publication"><a href="https://www.coursera.org/courses?query=image%20processing" target="_blank">Coursera</a> - an online education firm.
+                                            </li>
+                                            <li class="publication"><a href="http://bioimagingcore.be/DenoisEM/" target="_blank">DenoisEM</a> - fast and advanced image denoising of large-scale 3D electron microscopy data.
+                                            </li>
+                                            <li class="publication"><a href="https://github.com/juglab/n2v" target="_blank">Noise2Void</a> - learning denoising from single noisy images.
+                                            </li>
+                                            <li class="publication"><a href="https://github.com/czbiohub/noise2self" target="_blank">Noise2Self</a> - blind denoising by self-supervision.
+                                            </li>
+                                            <li class="publication"><a href="https://github.com/mpicbg-csbd/structured_N2V" target="_blank">StructN2V</a> - removing structured noise with self-supervised blind-spot networks.
                                             </li>
                                         </ul>
 									</section>
