--- a/People.html
+++ b/People.html
@@ -66,7 +66,7 @@
                                             <li>
                                                 <img src="./images/people/tskang.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kang, Tae-Seob&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
-                                                <p>Professor of Geophysics</p>
+                                                <p>Professor of Seismology & Geophysics</p>
                                                 <p>tskang(at)pknu.ac.kr<br>
                                                 Earthquake seismology, Seismic hazard<br>
                                                 <a href="KangTaeSeob_CV.html">[Resume]</a></p>
