Commit to update in research fields

--- a/Article.html
+++ b/Article.html
@@ -65,35 +65,23 @@
                                     </header>
                                     <ul class="link-list">
                                         <li><a href="Article.html">Article</a></li>
-                                        <li><a href="#">Book</a></li>
-                                        <li><a href="#">Report</a></li>
-                                        <li><a href="#">Abstract</a></li>
-                                        <li><a href="#">Media</a></li>
+                                        <li><a href="Book.html">Book</a></li>
+                                        <li><a href="Report.html">Report</a></li>
+                                        <li><a href="Conference.html">Conference</a></li>
+                                        <li><a href="Media.html">Media</a></li>
                                     </ul>
                                 </section>
-                                <section>
-                                    <header>
-                                        <h2>Related News</h2>
-                                    </header>
-                                    <p>
-                                        TBA
-                                    </p>
-                                    <ul class="link-list">
-                                        <li><a href="#">TBA</a></li>
-                                    </ul>
-                                </section>
-
 							</div>
 							<div class="col-9 col-12-medium imp-medium">
 
 								<!-- Main Content -->
 									<section>
 										<header>
-											<h2>Publication</h2>
+											<h2>Article</h2>
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S., Kim, Y. (2021). Upper crustal shear wave velocity and radial anisotropy beneath Jeju Island volcanoes from ambient noise tomography. <i>Geophysical Journal International</i>, Accepted in Jan. 19, 2021.
+                                            <li class="publication">Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S., Kim, Y. (2021). Upper crustal shear wave velocity and radial anisotropy beneath Jeju Island volcanoes from ambient noise tomography. <i>Geophysical Journal International</i>, <b>xx</b>(x), xx-xx. <a href="https://doi.org/10.1093/gji/ggab026" target="_blank">doi:10.1093/gji/ggab026</a>, Accepted in Jan. 19, 2021.
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
