--- a/Book.html
+++ b/Book.html
@@ -6,10 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Research of geophysics@pknu</title>
+		<title>Publication of geophysics@pknu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <!--<style type="text/css">
+          li.publication {margin: 0.0px 0.0px 6.0px 40.0px; text-indent: -40.0px;}
+        </style>-->
 	</head>
 	<body class="subpage">
 		<div id="page-wrapper">
@@ -41,54 +44,69 @@
 				<section id="content">
 					<div class="container">
 						<div class="row">
-							<div class="col-3 col-12-medium imp-medium">
+							<div class="col-3 col-12-medium">
 
 								<!-- Sidebar -->
-                                    <section>
-                                        <header>
-                                            <h2>Research Fields</h2>
-                                        </header>
-                                        <ul class="link-list">
-                                            <li><a href="#">Crust/mantle structure</a></li>
-                                            <li><a href="#">Seismicity</a></li>
-                                            <li><a href="#">Earthquake source parameters</a></li>
-                                            <li><a href="#">Strong ground motions</a></li>
-                                            <li><a href="#">Seismic hazard</a></li>
-                                        </ul>
-                                    </section>
-                                    <section>
-                                        <header>
-                                            <h2>Publication</h2>
-                                        </header>
-                                        <ul class="link-list">
-                                            <li><a href="Article.html">Article</a></li>
-                                            <li><a href="Book.html">Book</a></li>
-                                            <li><a href="Report.html">Report</a></li>
-                                            <li><a href="Conference.html">Conference</a></li>
-                                            <li><a href="Media.html">Media</a></li>
-                                        </ul>
-                                    </section>
+                                <section>
+                                    <header>
+                                        <h2>Research Fields</h2>
+                                    </header>
+                                    <ul class="link-list">
+                                        <li><a href="#">Crust/mantle structure</a></li>
+                                        <li><a href="#">Seismicity</a></li>
+                                        <li><a href="#">Earthquake source parameters</a></li>
+                                        <li><a href="#">Strong ground motions</a></li>
+                                        <li><a href="#">Seismic hazard</a></li>
+                                    </ul>
+                                </section>
+                                <section>
+                                    <header>
+                                        <h2>Publication</h2>
+                                    </header>
+                                    <ul class="link-list">
+                                        <li><a href="Article.html">Article</a></li>
+                                        <li><a href="Book.html">Book</a></li>
+                                        <li><a href="Report.html">Report</a></li>
+                                        <li><a href="Conference.html">Conference</a></li>
+                                        <li><a href="Media.html">Media</a></li>
+                                    </ul>
+                                </section>
 							</div>
-							<div class="col-9 col-12-medium">
+							<div class="col-9 col-12-medium imp-medium">
 
 								<!-- Main Content -->
 									<section>
 										<header>
-											<h2>Research</h2>
-											<h3>that <span style="color: #004d65;">geophysics@pknu</span> is conducting</h3>
+											<h2>Book</h2>
+											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
-                                        <p>
-                                            Recently (October 2020), a joint study was initiated with the World Heritage Headquarters in Jeju Special Self-Governing Province and Seoul National University/Korea University to investigate the magma structure, which is the root of Jeju volcanic bodies. Five broadband seismometers have been installed on the summit of Hallasan Mountain and at a height of about 1,500 m around it, and geophones are being installed at about 70 locations with auxiliary observation networks. It is expected to be able to visualize the three-dimensional structure of the lower part of the volcanic body in Jeju Island by observing micro-earthquakes occurring in the lower part of Jeju Island and analyzing seismic waves from earthquakes occurring in a distance.
-                                        </p>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">
+                                                이주희, 강태섭, 박용안, 김맹기, 이융남, 장순근, 홍성욱, 이용삼, 차형기, 최창조, 이상해 (2012). 인류문명, 자연과 공존하다. 국립제주박물관 문화총서 11, 서경문화사, ISBN 987-89-6062-091-9 (04380). <a href="https://doi.org/10.978.896062/0919">doi:10.978.896062/0919</a>
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">
+                                                최정찬, 강태섭, 강희철, 김선옥, 김영석, 박계헌, 백인성, 송용선, 이민희, 정상용 (2012). 지구환경과학. (주)시그마프레스, ISBN 978-89-97927-07-4. [원서: AGI, NAGT, Hudson, T. (2011). Living with Earth: An Introduction to Environmental Geology, 1st ed., Pearson Education, Inc., ISBN 0131424475]. <a href="https://doi.org/10.978.8997927/074">doi:10.978.8997927/074</a>
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">
+                                                김기영, 강태섭, 김영화, 김지수, 김형수, 민동주, 변중무, 신동훈, 오석훈 (2014). 지구물리탐사 개론. (주)시그마프레스, ISBN 978-89-6866-140-2. [원서: Mussett, A. E., Khan, M. A. (2000). Looking into the Earth: An Introduction to Geological Geophysics, Cambridge University Press, ISBN 9780511810305]. <a href="https://doi.org/10.978.896866/1402">doi:10.978.896866/1402</a>
+                                            </li>
+
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">
+                                                이은희, 강태섭, 홍희범, 이충환, 서금영, 이영혜, 송준섭, 강석기, 김정, 이억주, 유범재 (2017). 미래를 읽다 과학이슈 11 Season 5. (주)동아엠앤비, ISBN 979-11-87336-33-4 (04400). <a href="https://doi.org/10.979.1187336/334">doi:10.979.1187336/334</a>
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">
+                                                이준기, 강태섭, 양인재, 김유성, 우정웅, 김주환, 김민욱, 허다빈, 박제헌, 이승아, 박주현, 김수로, 김중열, 권성일, 정재훈, 권형일 (2017). 미소지진 모니터링 설계, 자료 취득 및 자료 분석. 명문인쇄공사, ISBN <a href="http://seoji.nl.go.kr/landingPage?isbn=9788993378665">978-89-93378-66-5</a> (93500).
+                                            </li>
+                                        </ul>
 									</section>
-                                    <section>
-                                        <header>
-                                            <h2>Related News</h2>
-                                        </header>
-                                        <p>
-                                            The <a href="https://www.nature.com">Nature</a> journal published a paper entitled "<a href="https://www.nature.com/articles/d41586-021-00075-2?WT.ec_id=NATURE-20210121&utm_source=nature_etoc&utm_medium=email&utm_campaign=20210121&sap-outbound-id=633984A6ED325B04D3A7939EAD0C4A615AC49422">Ten computer codes that transformed science</a>" by Jeffrey M. Perkel (Nature, vol.589, 21 January 2021, pp.345-348). The author polled dozens of researchers over the past year to develop a diverse line-up of ten software tools that have had a big impact on the world of science. Major researches in <span style="color: #004d65;">geophysics@pknu</span> are dependent on at least three items of those software tools: (1) Language pioneer - the Fortran compiler (1957), (2) Signal processor - fast Fourier transform (1965), and (3) Data explorer - IPython Notebook (2011).
-                                        </p>
-                                    </section>
 							</div>
 						</div>
 					</div>
