Commit to article and media updates

--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S., Kim, Y. (2021). Upper crustal shear wave velocity and radial anisotropy beneath Jeju Island volcanoes from ambient noise tomography. <i>Geophysical Journal International</i>, <b>xx</b>(x), xx-xx. <a href="https://doi.org/10.1093/gji/ggab026" target="_blank">doi:10.1093/gji/ggab026</a>, Accepted in Jan. 19, 2021.
+                                            <li class="publication">Lee, S.-J., Kim, S., Rhie, J., Kang, T.-S., Kim, Y. (2021). Upper crustal shear wave velocity and radial anisotropy beneath Jeju Island volcanoes from ambient noise tomography. <i>Geophysical Journal International</i>, <b>xx</b>(x), xx-xx. <a href="https://doi.org/10.1093/gji/ggab026" target="_blank">doi:10.1093/gji/ggab026</a>, Published: 22 January 2021.
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
