--- a/Media.html
+++ b/Media.html
@@ -82,6 +82,24 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="publication">
+                                                한국일보 기고, 2020.06.22. <a href="https://www.hankookilbo.com/News/Read/A202006191431000054?did=NA">지나친 기우가 부르는 지진 불안감</a>
+                                            </li>
+                                            <li class="publication">
+                                                JTBC 인터뷰, 2017.11.16. <a href="https://news.jtbc.joins.com/article/article.aspx?news_id=NB11550675">[인터뷰] 강태섭 교수 "경주 지진 여파? 인과 관계 단정짓기 어려워"</a>
+                                            </li>
+                                            <li class="publication">
+                                                한국일보 100&deg;C 인터뷰, 2016.09.25. <a href="https://www.hankookilbo.com/News/Read/201609251437121506">“원전만이 아니라 학교ㆍ병원도 우선 내진 보강해야”</a>
+                                            </li>
+                                            <li class="publication">
+                                                JTBC 인터뷰, 2016.09.20. <a href="https://news.jtbc.joins.com/article/article.aspx?news_id=NB11316477">[인터뷰] "지진, 축적된 힘 해소…당분간 큰 지진 없을 듯"</a>
+                                            </li>
+                                            <li class="publication">
+                                                JTBC 인터뷰, 2016.09.20. <a href="https://news.jtbc.joins.com/article/article.aspx?news_id=NB11316479">여진 계속…오늘밤은 괜찮나? 잠 못드는 공포의 경주</a>
+                                            </li>
+                                            <li class="publication">
+                                                YTN 사이언스 인터뷰, 2014.03.14. <a href="https://science.ytn.co.kr/weather/weather_view.php?s_mcd=1001&key=201403140901461529">'일본 지진'..."한반도 안전지대 아니다" [강태섭, 부경대학교 교수]</a>
+                                            </li>
+                                            <li class="publication">
                                                 한국경제신문, 2014.07.14. <a href="https://www.hankyung.com/society/article/201407140531h">부경대, 전공체험 프로그램 인기</a>
                                             </li>
                                         </ul>
