Commit to index update (small)

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									<section>
 										<header>
 											<h2>Who We Are</h2>
-											<h3>.. trying to know what seismograms tell</h3>
+											<h3>trying to know what seismograms tell</h3>
 										</header>
 										<a href="#" class="feature-image"><img src="images/Jeju_photoed_Giback.png" alt="" /></a>
                                         <p>
@@ -142,7 +142,7 @@
 									<section>
 										<header>
 											<h2>What We Do</h2>
-											<h3>... trying to find and dig seismograms</h3>
+											<h3>trying to find and dig seismograms</h3>
 										</header>
                                         <a href="#" class="feature-image"><img src="images/Jeju_photoed_Dabeen.png" alt="" /></a>
                                         <p>
@@ -157,7 +157,7 @@
 									<section>
 										<header>
 											<h2>Where We Go</h2>
-											<h3>... trying to get where seismograms are</h3>
+											<h3>trying to get where seismograms are</h3>
 										</header>
                                         <a href="#" class="feature-image"><img src="images/Hallasan_photoed_Dabeen.png" alt="" /></a>
                                         <p>
