Commit to People and Research update

--- a/People.html
+++ b/People.html
@@ -117,9 +117,21 @@
                                             <li>
                                                 <img src="./images/people/gyeongdonchai.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Chai, Gyeongdon&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher</p>
+                                                <p>Researcher; Researcher Appointee at KMA</p>
                                                 <p>cgd1605(at)gmail.com<br>
                                                 Earthquake source parameters</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kim, Hangil&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Researcher</p>
+                                                <p>xx(at)xx.xx</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -181,7 +193,7 @@
                                             <li>
                                                 <img src="./images/people/mijikim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Miji&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
-                                                <p>M.S. Student</p>
+                                                <p>M.S. Student; Internship Trainee at KIGAM</p>
                                                 <p>miji61759(at)gmail.com<br>
                                                 Uncertainty of seismicity</p>
                                             </li>
@@ -352,7 +364,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Minook&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
-                                                <p>Korea Institute of Nuclear Safety</p>
+                                                <p>Korea Institute of Nuclear Safety (KINS)</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -364,7 +376,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Song, Geun Young&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
-                                                <p>Korea Meteorological Administration</p>
+                                                <p>Korea Meteorological Administration (KMA)</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -376,7 +388,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Eunmi&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Officer</p>
-                                                <p>Korea Meteorological Administration</p>
+                                                <p>Korea Meteorological Administration (KMA)</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -412,7 +424,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Park, Hyejin&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
-                                                <p>Korea Meteorological Administration</p>
+                                                <p>Korea Meteorological Administration (KMA)</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -424,7 +436,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Park, Euna&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
-                                                <p>Korea Meteorological Administration</p>
+                                                <p>Korea Meteorological Administration (KMA)</p>
                                             </li>
                                         </ul>
                                     </section>
