--- a/People.html
+++ b/People.html
@@ -115,23 +115,10 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/gyeongdonchai.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Chai, Gyeongdon&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher; Researcher Appointee at KMA</p>
-                                                <p>cgd1605(at)gmail.com<br>
-                                                Earthquake source parameters</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <img src="./images/people/hangil.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Hangil&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
                                                 <p>Researcher</p>
-                                                <p>xx(at)xx.xx</p>
+                                                <p>seedwhite(at)gmail.com</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -475,6 +462,20 @@
                                                 <p>Ph.D. Student</p>
                                                 <p>Saint Louis University</p>
                                                 <p>Researcher (2017-2018)</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/gyeongdonchai.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Chai, Gyeongdon&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Researcher</p>
+                                                <p>Korea Meteorological Administration (KMA)</p>
+                                                <p>cgd1605(at)gmail.com<br>
+                                                Earthquake source parameters</p>
                                             </li>
                                         </ul>
                                     </section>
