Commit to People update (Hangil's interest)

--- a/People.html
+++ b/People.html
@@ -117,8 +117,9 @@
                                             <li>
                                                 <img src="./images/people/hangil.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Hangil&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher</p>
-                                                <p>seedwhite(at)gmail.com</p>
+                                                <p>Researcher, Administrator</p>
+                                                <p>seedwhite(at)gmail.com<br>
+                                                Material science</p>
                                             </li>
                                         </ul>
                                     </section>
