--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 									<section>
 										<header>
 											<h2>Who We Are</h2>
-											<h3>trying to know what seismograms tell</h3>
+											<h3>people trying to understand what seismograms tell us</h3>
 										</header>
 										<a href="#" class="feature-image"><img src="images/Jeju_photoed_Giback.png" alt="" /></a>
                                         <p>
-                                        We study the sources of large and small earthquakes occurring at home and abroad, including the 2016 M<sub>L</sub> 5.8 Gyeongju earthquake and 2017 M<sub>L</sub> 5.4 Pohang earthquake. Using the seismic observation data obtained by directly operating a high-density broadband seismic observation network, the characteristics of the seismic sources associated with these earthquakes, such as the range and posture of the underground fault motion that caused the Gyeongju and Pohang earthquakes, could be revealed in great detail.<br>
+                                        We study the sources of large and small earthquakes occurring at home and abroad, including the 2016 M<sub>L</sub> 5.8 Gyeongju earthquake and the 2017 M<sub>L</sub> 5.4 Pohang earthquake. Using the seismic observation data obtained by directly operating a high-density broadband seismic observation network, the characteristics of the seismic sources associated with these earthquakes, such as the range and orientation of the underground fault motion that caused the Gyeongju and Pohang earthquakes, can be revealed in great detail.<br>
                                         We welcome students interested in seismological research!
                                         </p>
 									</section>
@@ -142,11 +142,11 @@
 									<section>
 										<header>
 											<h2>What We Do</h2>
-											<h3>trying to find and dig seismograms</h3>
+											<h3>people working to obtain and use seismograms</h3>
 										</header>
                                         <a href="#" class="feature-image"><img src="images/Jeju_photoed_Dabeen.png" alt="" /></a>
                                         <p>
-                                        We are very interested in using seismic waves to reveal the crust and mantle structures of East Asia including the Korean Peninsula, but not limited to the area. Cross-correlation analysis of the background noise of continuous seismic records recorded from the seismic network of the southern Korean Peninsula and the seismic network of neighboring China and Japan, and the seismic wave tomography method were applied to the detailed crust structure of the lower part of the Korean Peninsula and the seismic wave velocity structure of the crust and upper mantle of the lower part of East Asia was imaged.
+                                        We are very interested in using seismic waves to reveal the crust and mantle structures of East Asia including the Korean Peninsula, as well as other areas. Cross-correlation analysis of the background noise of continuous seismic records recorded from the seismic network of the southern Korean Peninsula and the seismic network of neighboring China and Japan, and the seismic wave tomography method were applied to the detailed crustal structure of the lower part of the Korean Peninsula, and the seismic wave velocity structure of the crust and upper mantle of the lower part of East Asia was imaged.
                                         </p>
 									</section>
 
@@ -157,11 +157,11 @@
 									<section>
 										<header>
 											<h2>Where We Go</h2>
-											<h3>trying to get where seismograms are</h3>
+											<h3>people going where seismograms are located</h3>
 										</header>
                                         <a href="#" class="feature-image"><img src="images/Hallasan_photoed_Dabeen.png" alt="" /></a>
                                         <p>
-                                        Modern seismology is observational science. Our lab is leading research to further investigate the characteristics of earthquake sources and the internal structure of the Earth through extensive and detailed earthquake observations. We operate high-performance seismic observation equipment and real-time and precise analysis computer servers, and conduct larger and more detailed research in cooperation with related seismology research groups at home and abroad. The ultimate goal of these studies is to create a society that is safe from earthquake disasters, starting with a fundamental search for natural phenomena.
+                                        Modern seismology is an observational science. Our lab is leading research to further investigate the characteristics of earthquake sources and the internal structure of the Earth further through extensive and detailed earthquake observations. We operate high-performance seismic observation equipment and real-time and precise analysis computer servers, and conduct large-scale and more detailed research in cooperation with related seismology research groups at home and abroad. The ultimate goal of these studies is to create a society that is safe from earthquake disasters, beginning with a fundamental search for natural phenomena.
                                         </p>
 									</section>
 
