--- a/Education.html
+++ b/Education.html
@@ -50,7 +50,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> is giving</h3>
 										</header>
 										<p>
-											Do what you want, not your surroundings does. 
+											Do what you want, not what your surroundings do.
 										</p>
 										<p>
 											TBA...
