--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -85,7 +85,7 @@
                             <div class="col-12" style="margin: -20px 0 0px 0;">
                                 <section style="padding: 10px 10px 10px 30px;">
                                         1993-1995, Sergeant, Military Service, Republic of Korea Army<br>
-                                        1995-1998, Researcher, R&D Center, SK Engineering & Construction Company (SKEC)<br>
+                                        1995-1998, Researcher, R&D Center, SK Engineering & Construction Company (presently, SK ecoplant)<br>
                                         2000-2001, Administrative Assistant, School of Earth and Environmental Sciences, Seoul National University<br>
                                         2004-2005, Senior Engineer, Division of Civil Engineering, KEPCO Engineering & Construction Company (KEPCO E&C)<br>
                                         2005-2009, Senior Researcher, Earthquake Research Center, Korea Institute of Geoscience and Mineral Resources (KIGAM)<br>
@@ -104,20 +104,20 @@
                             </div>
                             <div class="col-12" style="margin: -20px 0 0px 0;">
                                 <section style="padding: 10px 10px 10px 30px;">
-                                        2014-2016/2018-2022, Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
-                                        2014-2016/2018-2022, Director, Institute of Environtal Geosciences, Pukyong National University
                                         2011-present, Editor, <a href="https://www.springer.com/journal/12303" target="_blank">Geosciences Journal</a><br>
-                                        2014-2018, Advisory Board Member, Korea Meteorological Administration<br>
                                         2011-2013, Board Member, The Earthquake Engineering Society of Korea<br>
                                         2013-2020, Board Member, The Korea Society of Earth and Exploration Geophysicists<br>
                                         2014-2015/2020-2021, Board Member, The Geological Society of Korea<br>
-                                        2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
+                                        2014-2016/2018-2021, Head of Department, Department of Earth and Environmental Sciences, Pukyong National University<br>
+                                        2014-2016/2018-2022, Director, Institute of Environtal Geosciences, Pukyong National University<br>
+                                        2014-2018, Advisory Board Member, Korea Meteorological Administration<br>
+                                        2016-2017/2019-2021, Earthquake and Vocano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety(formerly, Ministry of Public Safety and Security)<br>
                                         2018-2021, Earthquake and Vocano Disaster Mitigation Policy Committee, Busan Metropolitan City<br>
+                                        2018-2021, Review Board, National Research Foundation of Korea<br>
+                                        2020-2021, The Pohang Earthquake Investigation Committee, The Prime Minister<br>
+                                        2020-2021, Advisory Committee, Korea Institute of Nuclea Safety
                                         2020-2023, Earthquake Disaster Investigation Committee, Ulsan Metropolitan City<br>
                                         2020-2023, Earthquake Advisory Committee, Pohang City<br>
-                                        2016-2017/2019-2021, Earthquake and Vocano Disaster Mitigation Advisory Committee, Ministry of the Interior and Safety(formerly, Ministry of Public Safety and Security)<br>
-                                        2018-2021, Review Board, National Research Foundation of Korea<br>
-                                        2020-2021, Advisory Committee, Korea Institute of Nuclea Safety
                                     </section>
                             </div>
                         </div>
