--- a/Activity.html
+++ b/Activity.html
@@ -58,6 +58,9 @@
                                             <li><a href="#">Gyeongju Naenam Geophone Array</a></li>
 											<li><a href="#">Pohang Temporary Broadband Seismograph Array</a></li>
 											<li><a href="#">Chogye Basin Array</a></li>
+                                            <li><a href="#">Kiskatinaw Seismic Monitoring and
+                                                Mitigation Area (KSSMA) Array, Fort St. John, British Columbia, Canada</a></li>
+                                            <li><a href="#">Mt. Meager and the Garibaldi Volcanic Belt Array, British Columbia, Canada</a></li>
 										</ul>
 									</section>
                                     <section>
